--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="Default">
 <!-- <html lang="fr"> -->
 <head>
-    <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <!-- <meta name="keywords" content="La chouette agence, agence web design, web design Lyon, Création site internet Lyon, création site web Lyon, site internet Lyon, design site internet, agence digitale, design site internet tendance, ergonomie et design entreprise"> -->
-    <meta name="description" content="">
-    <!-- <meta name="description" content="La chouette agence - Meilleure agence de web design basée à Lyon. Pour tous vos besoins, nous vous aideront au design de votre site internet. Conception de site d'entreprises ou particuliers."> -->
+    <meta charset="utf-8"><title> et <description</title>
+	<meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+	
+	<meta name="description" content="">
+
+	<meta name="google-site-verification" content="aPCCcxtNG8jaYhxo7sGNgVq-o2z1jBChnvS4TzzzqcA" />
+	
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
