--- a/page2.html
+++ b/page2.html
@@ -6,7 +6,9 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	
+	<meta name="google-site-verification" content="aPCCcxtNG8jaYhxo7sGNgVq-o2z1jBChnvS4TzzzqcA" />
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
